Update RCOS project description

--- a/projects.html
+++ b/projects.html
@@ -29,16 +29,6 @@
 </div>
 <div class = "projects">
     <div class = "item">
-        <div class = "itemType"><div><span>RCOS</span></div></div>
-        <span class = "itemTitle">Wrathspriter</span>
-        <span class="itemTime">Winter & Spring 2022</span>
-        <p class = "itemDetail">An RCOS project that handles the creation and sending of user-created characters to Wrathspriter through the use of a progressive web app.</p>
-        <ul>
-            <li>NodeJS, ReactJS, TypeScript</li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathspriter">GitHub</a></li>
-        </ul>
-    </div>
-    <div class = "item">
         <div class = "itemType"><div><span>Game Development II</span></div></div>
         <span class = "itemTitle">Steal Yourself</span>
         <span class="itemTime">Spring 2022</span>
@@ -47,6 +37,20 @@
             <li>Unity, Perforce, C#</li>
         </ul>
         <a class = "button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Demo on Itch.io</a>
+    </div>
+        <div class = "item">
+        <div class = "itemType"><div><span>RCOS</span></div></div>
+        <span class = "itemTitle">Wrathskeller, Wrathpriter, & Wrathserver</span>
+        <span class="itemTime">Winter & Spring 2022</span>
+        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
+        <ul>
+            <li>Wrathskeller: Godot</li>
+            <li>Wrathpriter: ReactJS & Typescript</li>
+            <li>Wrathserver: Python & FastAPI</li>
+            <li>View Wrathskelller on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
+            <li>View Wrathspriter on <a href = "https://www.github.com/Apexal/wrathspriter">GitHub</a></li>
+            <li>View Wrathserver on <a href = "https://www.github.com/Apexal/wrathserver">GitHub</a></li>
+        </ul>
     </div>
     <div class = "item">
         <div class = "itemType"><div><span>Personal</span></div></div>
@@ -96,18 +100,6 @@
         </ul>
         <img src = "img/snowman/0.png"/>
         <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>RCOS</span></div></div>
-        <span class = "itemTitle">Wrathskeller, Wrathpriter, & Wrathserver</span>
-        <span class="itemTime">Winter & Spring 2022</span>
-        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
-        <ul>
-            <li>Godot</li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathskeller">Wrathskeller GitHub</a></li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathspriter">Wrathspriter GitHub</a></li>
-            <li>View on <a href = "https://www.github.com/Apexal/wrathserver">Wrathserver GitHub</a></li>
-        </ul>
     </div>
 </div>
 </body>
