--- a/projects.html
+++ b/projects.html
@@ -1,106 +1,194 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Charles Reverand's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/fonts.css"/>
-    <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/mobile.css"/>
-</head>
-<body class = "darkBG">
-<div class = "halfPage">
-    <div class = "links">
-        <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-        <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
-        <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
-        <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
-    </div>
-    <div class = "aboutMin">
-        <div class = "name">
-            <h1>Projects</h1>
+    <head>
+        <title>Charles Reverand's Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="/css/fonts.css" />
+        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="/css/mobile.css" />
+    </head>
+    <body class="darkBG">
+        <div class="halfPage">
+            <div class="links">
+                <a href="https://www.github.com/talios0"
+                    ><img
+                        src="/img/GitHub-Mark-Light-120px-plus.png"
+                        alt="Charles' Github"
+                /></a>
+                <a href="https://talios0.itch.io"
+                    ><img
+                        src="/img/itchio-textless-white.svg"
+                        alt="Charles' Itch.io"
+                /></a>
+                <a href="https://www.twitter.com/talios0"
+                    ><img
+                        src="/img/2021 Twitter logo - white.png"
+                        alt="Charles' Twitter"
+                /></a>
+                <a
+                    href="https://www.linkedin.com/in/charles-reverand-b64694187/"
+                    ><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"
+                /></a>
+            </div>
+            <div class="aboutMin">
+                <div class="name">
+                    <h1>Projects</h1>
+                </div>
+            </div>
+            <nav class="pageNav">
+                <a class="button" href="index.html"><div>Home</div></a>
+                <a class="button" href="projects.html"><div>Projects</div></a>
+                <a class="button" href="work.html"><div>Work</div></a>
+                <a class="button" href="education.html"><div>Education</div></a>
+            </nav>
         </div>
-    </div>
-    <nav class = "pageNav">
-        <a class = "button" href="index.html"><div>Home</div></a>
-        <a class = "button" href="projects.html"><div>Projects</div></a>
-        <a class = "button" href="work.html"><div>Work</div></a>
-        <a class = "button" href="education.html"><div>Education</div></a>
-    </nav>
-</div>
-<div class = "projects">
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Development II</span></div></div>
-        <span class = "itemTitle">Steal Yourself</span>
-        <span class="itemTime">Spring 2022</span>
-        <p class = "itemDetail">An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum Master. Core responsibilities include Enemy AI and Weapon Systems.</p>
-        <ul>
-            <li>Unity, Perforce, C#</li>
-        </ul>
-        <a class = "button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Demo on Itch.io</a>
-    </div>
-        <div class = "item">
-        <div class = "itemType"><div><span>RCOS</span></div></div>
-        <span class = "itemTitle">Wrathskeller, Wrathpriter, & Wrathserver</span>
-        <span class="itemTime">Winter & Spring 2022</span>
-        <p class = "itemDetail">An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with major-specific traits!</p>
-        <ul>
-            <li>Wrathskeller: Godot</li>
-            <li>Wrathpriter: ReactJS & Typescript</li>
-            <li>Wrathserver: Python & FastAPI</li>
-            <li>View Wrathskelller on <a href = "https://www.github.com/Apexal/wrathskeller">GitHub</a></li>
-            <li>View Wrathspriter on <a href = "https://www.github.com/Apexal/wrathspriter">GitHub</a></li>
-            <li>View Wrathserver on <a href = "https://www.github.com/Apexal/wrathserver">GitHub</a></li>
-        </ul>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Personal</span></div></div>
-        <span class = "itemTitle">Anime Schedule</span>
-        <span class="itemTime">February 2022 - Present</span>
-        <p class = "itemDetail">Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and AniList APIs.</p>
-        <ul>
-            <li>NodeJS, Express, JS</li>
-            <li>View on <a href = "https://www.github.com/talios0/Anime-Dub-Schedule">GitHub</a></li>
-        </ul>
-        <a class = "button" href = "https://talios.software">Go to Site</a>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Jam</span></div></div>
-        <span class = "itemTitle">Heart of the Cards</span>
-        <span class = "itemTime">Summer 2021</span>
-        <p class = "itemDetail">Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary programmer.</p>
-        <ul>
-            <li>Unity3D, C#</li>
-            <li>Overall Ranking: 18/40</li>
-            <li>Overall Good: 8/40</li>
-        </ul>
-        <img src = "img/hotc/0.png"/>
-        <a class = "button" href = "https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Personal</span></div></div>
-        <span class = "itemTitle">Catan-Like Discord Game</span>
-        <span class="itemTime">Summer 2021 - Present</span>
-        <p class = "itemDetail">A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room. Keeps track of game progess and allows for multiple concurrent games.</p>
-        <ul>
-            <li>Discord.JS, NodeJS, MongoDB, JS</li>
-            <li>Estimated Progress: 72%</li>
-        </ul>
-        <img src = "img/catan/0.png"/>
-    </div>
-    <div class = "item">
-        <div class = "itemType"><div><span>Game Jam</span></div></div>
-        <span class = "itemTitle">Christmas of the Snowmen</span>
-        <span class = "itemTime">December 2021</span>
-        <p class = "itemDetail">Programmer, Designer, and Artist for this game about a Christmas Tree saving Christmas for the Jame Gam Christmas Edition in 1.5 days.</p>
-        <ul>
-            <li>Unity3D, C#, Aseprite</li>
-            <li>Overall Ranking: 22/81</li>
-            <li>Theme Ranking: 9/81</li>
-            <li>View on <a href = "https://www.github.com/talios0/SantaSnowman">GitHub</a></li>
-        </ul>
-        <img src = "img/snowman/0.png"/>
-        <a class = "button" href = "https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
-    </div>
-</div>
-</body>
+        <div class="projects">
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Game Development II</span></div>
+                </div>
+                <span class="itemTitle">Steal Yourself</span>
+                <span class="itemTime">Spring 2022</span>
+                <p class="itemDetail">
+                    An up and coming Roguelite made in Unity over an entire
+                    school semester. Programmer and Scrum Master. Core
+                    responsibilities include Enemy AI and Weapon Systems.
+                </p>
+                <ul>
+                    <li>Unity, Perforce, C#</li>
+                </ul>
+                <a
+                    class="button"
+                    href="https://lunar-tuna-studios.itch.io/steal-yourself"
+                    >Demo on Itch.io</a
+                >
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>RCOS</span></div>
+                </div>
+                <span class="itemTitle"
+                    >Wrathskeller, Wrathpriter, & Wrathserver</span
+                >
+                <span class="itemTime">Winter & Spring 2022</span>
+                <p class="itemDetail">
+                    An RCOS project where irl user-created characters are pitted
+                    in an RPI-themed fighting game with major-specific traits!
+                </p>
+                <ul>
+                    <li>Wrathskeller: Godot</li>
+                    <li>Wrathpriter: ReactJS & Typescript</li>
+                    <li>Wrathserver: Python & FastAPI</li>
+                    <li>
+                        View Wrathskelller on
+                        <a href="https://www.github.com/Apexal/wrathskeller"
+                            >GitHub</a
+                        >
+                    </li>
+                    <li>
+                        View Wrathspriter on
+                        <a href="https://www.github.com/Apexal/wrathspriter"
+                            >GitHub</a
+                        >
+                    </li>
+                    <li>
+                        View Wrathserver on
+                        <a href="https://www.github.com/Apexal/wrathserver"
+                            >GitHub</a
+                        >
+                    </li>
+                </ul>
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Personal</span></div>
+                </div>
+                <span class="itemTitle">Anime Schedule</span>
+                <span class="itemTime">February 2022 - Present</span>
+                <p class="itemDetail">
+                    Shows the release dates for English-dubbed anime in a
+                    graphical format. Utilizes the TeamUp and AniList APIs.
+                </p>
+                <ul>
+                    <li>NodeJS, Express, JS</li>
+                    <li>
+                        View on
+                        <a
+                            href="https://www.github.com/talios0/Anime-Dub-Schedule"
+                            >GitHub</a
+                        >
+                    </li>
+                </ul>
+                <a class="button" href="https://talios.software">Go to Site</a>
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Game Jam</span></div>
+                </div>
+                <span class="itemTitle">Heart of the Cards</span>
+                <span class="itemTime">Summer 2021</span>
+                <p class="itemDetail">
+                    Created for the So Bad It's Good Game Jame with 3 others. I
+                    was the project leader and primary programmer.
+                </p>
+                <ul>
+                    <li>Unity3D, C#</li>
+                    <li>Overall Ranking: 18/40</li>
+                    <li>Overall Good: 8/40</li>
+                </ul>
+                <img src="img/hotc/0.png" />
+                <a
+                    class="button"
+                    href="https://talios0.itch.io/heart-of-the-cards"
+                    >Play on Itch.io</a
+                >
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Personal</span></div>
+                </div>
+                <span class="itemTitle">Catan-Like Discord Game</span>
+                <span class="itemTime">Summer 2021 - Present</span>
+                <p class="itemDetail">
+                    A WIP Discord Bot that recreates Catan, playable directly
+                    through a Discord Server's chat room. Keeps track of game
+                    progess and allows for multiple concurrent games.
+                </p>
+                <ul>
+                    <li>Discord.JS, NodeJS, MongoDB, JS</li>
+                    <li>Estimated Progress: 72%</li>
+                </ul>
+                <img src="img/catan/0.png" />
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Game Jam</span></div>
+                </div>
+                <span class="itemTitle">Christmas of the Snowmen</span>
+                <span class="itemTime">December 2021</span>
+                <p class="itemDetail">
+                    Programmer, Designer, and Artist for this game about a
+                    Christmas Tree saving Christmas for the Jame Gam Christmas
+                    Edition in 1.5 days.
+                </p>
+                <ul>
+                    <li>Unity3D, C#, Aseprite</li>
+                    <li>Overall Ranking: 22/81</li>
+                    <li>Theme Ranking: 9/81</li>
+                    <li>
+                        View on
+                        <a href="https://www.github.com/talios0/SantaSnowman"
+                            >GitHub</a
+                        >
+                    </li>
+                </ul>
+                <img src="img/snowman/0.png" />
+                <a
+                    class="button"
+                    href="https://talios0.itch.io/christmas-of-the-snowmen"
+                    >Play on Itch.io</a
+                >
+            </div>
+        </div>
+    </body>
 </html>
