--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                     <div><span>RCOS</span></div>
                 </div>
                 <span class="itemTitle"
-                    >Wrathskeller, Wrathpriter, & Wrathserver</span
+                    >Wrathskeller, Wrathspriter, & Wrathserver</span
                 >
                 <span class="itemTime">Winter & Spring 2022</span>
                 <p class="itemDetail">
