Updated Wrathspriter technologies

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                 </p>
                 <ul>
                     <li>Wrathskeller: Godot</li>
-                    <li>Wrathpriter: ReactJS & Typescript</li>
+                    <li>Wrathpriter: NodeJS, ReactJS, & Typescript</li>
                     <li>Wrathserver: Python & FastAPI</li>
                     <li>
                         View Wrathskelller on
