Fixed some lines being too short

--- a/projects.html
+++ b/projects.html
@@ -11,22 +11,15 @@
         <div class="halfPage">
             <div class="links">
                 <a href="https://www.github.com/talios0"
-                    ><img
-                        src="/img/GitHub-Mark-Light-120px-plus.png"
-                        alt="Charles' Github"
+                    ><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"
                 /></a>
                 <a href="https://talios0.itch.io"
-                    ><img
-                        src="/img/itchio-textless-white.svg"
-                        alt="Charles' Itch.io"
+                    ><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"
                 /></a>
                 <a href="https://www.twitter.com/talios0"
-                    ><img
-                        src="/img/2021 Twitter logo - white.png"
-                        alt="Charles' Twitter"
+                    ><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"
                 /></a>
-                <a
-                    href="https://www.linkedin.com/in/charles-reverand-b64694187/"
+                <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"
                     ><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"
                 /></a>
             </div>
@@ -50,30 +43,23 @@
                 <span class="itemTitle">Steal Yourself</span>
                 <span class="itemTime">Spring 2022</span>
                 <p class="itemDetail">
-                    An up and coming Roguelite made in Unity over an entire
-                    school semester. Programmer and Scrum Master. Core
-                    responsibilities include Enemy AI and Weapon Systems.
+                    An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum
+                    Master. Core responsibilities include Enemy AI and Weapon Systems.
                 </p>
                 <ul>
                     <li>Unity, Perforce, C#</li>
                 </ul>
-                <a
-                    class="button"
-                    href="https://lunar-tuna-studios.itch.io/steal-yourself"
-                    >Demo on Itch.io</a
-                >
+                <a class="button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Demo on Itch.io</a>
             </div>
             <div class="item">
                 <div class="itemType">
                     <div><span>RCOS</span></div>
                 </div>
-                <span class="itemTitle"
-                    >Wrathskeller, Wrathspriter, & Wrathserver</span
-                >
+                <span class="itemTitle">Wrathskeller, Wrathspriter, & Wrathserver</span>
                 <span class="itemTime">Winter & Spring 2022</span>
                 <p class="itemDetail">
-                    An RCOS project where irl user-created characters are pitted
-                    in an RPI-themed fighting game with major-specific traits!
+                    An RCOS project where irl user-created characters are pitted in an RPI-themed fighting game with
+                    major-specific traits!
                 </p>
                 <ul>
                     <li>Wrathskeller: Godot</li>
@@ -81,21 +67,15 @@
                     <li>Wrathserver: Python & FastAPI</li>
                     <li>
                         View Wrathskelller on
-                        <a href="https://www.github.com/Apexal/wrathskeller"
-                            >GitHub</a
-                        >
+                        <a href="https://www.github.com/Apexal/wrathskeller">GitHub</a>
                     </li>
                     <li>
                         View Wrathspriter on
-                        <a href="https://www.github.com/Apexal/wrathspriter"
-                            >GitHub</a
-                        >
+                        <a href="https://www.github.com/Apexal/wrathspriter">GitHub</a>
                     </li>
                     <li>
                         View Wrathserver on
-                        <a href="https://www.github.com/Apexal/wrathserver"
-                            >GitHub</a
-                        >
+                        <a href="https://www.github.com/Apexal/wrathserver">GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -106,17 +86,14 @@
                 <span class="itemTitle">Anime Schedule</span>
                 <span class="itemTime">February 2022 - Present</span>
                 <p class="itemDetail">
-                    Shows the release dates for English-dubbed anime in a
-                    graphical format. Utilizes the TeamUp and AniList APIs.
+                    Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and
+                    AniList APIs.
                 </p>
                 <ul>
                     <li>NodeJS, Express, JS</li>
                     <li>
                         View on
-                        <a
-                            href="https://www.github.com/talios0/Anime-Dub-Schedule"
-                            >GitHub</a
-                        >
+                        <a href="https://www.github.com/talios0/Anime-Dub-Schedule">GitHub</a>
                     </li>
                 </ul>
                 <a class="button" href="https://talios.software">Go to Site</a>
@@ -128,8 +105,8 @@
                 <span class="itemTitle">Heart of the Cards</span>
                 <span class="itemTime">Summer 2021</span>
                 <p class="itemDetail">
-                    Created for the So Bad It's Good Game Jame with 3 others. I
-                    was the project leader and primary programmer.
+                    Created for the So Bad It's Good Game Jame with 3 others. I was the project leader and primary
+                    programmer.
                 </p>
                 <ul>
                     <li>Unity3D, C#</li>
@@ -137,11 +114,7 @@
                     <li>Overall Good: 8/40</li>
                 </ul>
                 <img src="img/hotc/0.png" />
-                <a
-                    class="button"
-                    href="https://talios0.itch.io/heart-of-the-cards"
-                    >Play on Itch.io</a
-                >
+                <a class="button" href="https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
             </div>
             <div class="item">
                 <div class="itemType">
@@ -150,9 +123,8 @@
                 <span class="itemTitle">Catan-Like Discord Game</span>
                 <span class="itemTime">Summer 2021 - Present</span>
                 <p class="itemDetail">
-                    A WIP Discord Bot that recreates Catan, playable directly
-                    through a Discord Server's chat room. Keeps track of game
-                    progess and allows for multiple concurrent games.
+                    A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room.
+                    Keeps track of game progess and allows for multiple concurrent games.
                 </p>
                 <ul>
                     <li>Discord.JS, NodeJS, MongoDB, JS</li>
@@ -167,9 +139,8 @@
                 <span class="itemTitle">Christmas of the Snowmen</span>
                 <span class="itemTime">December 2021</span>
                 <p class="itemDetail">
-                    Programmer, Designer, and Artist for this game about a
-                    Christmas Tree saving Christmas for the Jame Gam Christmas
-                    Edition in 1.5 days.
+                    Programmer, Designer, and Artist for this game about a Christmas Tree saving Christmas for the Jame
+                    Gam Christmas Edition in 1.5 days.
                 </p>
                 <ul>
                     <li>Unity3D, C#, Aseprite</li>
@@ -177,17 +148,11 @@
                     <li>Theme Ranking: 9/81</li>
                     <li>
                         View on
-                        <a href="https://www.github.com/talios0/SantaSnowman"
-                            >GitHub</a
-                        >
+                        <a href="https://www.github.com/talios0/SantaSnowman">GitHub</a>
                     </li>
                 </ul>
                 <img src="img/snowman/0.png" />
-                <a
-                    class="button"
-                    href="https://talios0.itch.io/christmas-of-the-snowmen"
-                    >Play on Itch.io</a
-                >
+                <a class="button" href="https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
             </div>
         </div>
     </body>
