Updated Steal Yourself description

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 <span class="itemTime">Spring 2022</span>
                 <p class="itemDetail">
                     An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum
-                    Master. Core responsibilities include Enemy AI and Weapon Systems.
+                    Master. Core responsibilities include Enemy AI, Weapon Systems, Cutscene Programmer, VFX/SFX Programmer, Input Programmer, etc.
                 </p>
                 <ul>
                     <li>Unity, Perforce, C#</li>
