Updated Steal Yourself description

--- a/projects.html
+++ b/projects.html
@@ -43,13 +43,13 @@
                 <span class="itemTitle">Steal Yourself</span>
                 <span class="itemTime">Spring 2022</span>
                 <p class="itemDetail">
-                    An up and coming Roguelite made in Unity over an entire school semester. Programmer and Scrum
+                    A top-down action game made in Unity over an entire school semester. Programmer and Scrum
                     Master. Core responsibilities include Enemy AI, Weapon Systems, Cutscene Programmer, VFX/SFX Programmer, Input Programmer, etc.
                 </p>
                 <ul>
                     <li>Unity, Perforce, C#</li>
                 </ul>
-                <a class="button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Demo on Itch.io</a>
+                <a class="button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Play on Itch.io</a>
             </div>
             <div class="item">
                 <div class="itemType">
