--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <div class = "fullPage">
     <div class = "links">
-        <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-        <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
-        <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
+        <a href="https://www.github.com/taliyos"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
+        <a href="https://taliyos.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+        <a href="https://www.twitter.com/taliyos"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
         <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
     </div>
     <div class = "about">
@@ -21,7 +21,7 @@
             <span>RPI '24 Computer Science and Games and Simulation Arts and Sciences</span>
         </div>
         <div class = "info">
-            <img src="img/temp.jpg"/>
+            <img alt = "A photo of Charles Reverand against a gray/black backdrop" src="img/temp.jpg"/>
             <div>
                 Hiya! I'm a current junior Computer Science student, dual majoring in GSAS, with a passion for game development.
             </div>
