Updated Links + GPA

--- a/education.html
+++ b/education.html
@@ -9,9 +9,9 @@
 <body class = "darkBG">
     <div class = "halfPage">
         <div class = "links">
-            <a href="https://www.github.com/talios0"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
-            <a href="https://talios0.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
-            <a href="https://www.twitter.com/talios0"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
+            <a href="https://www.github.com/taliyos"><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"/></a>
+            <a href="https://taliyos.itch.io"><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"/></a>
+            <a href="https://www.twitter.com/taliyos"><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"/></a>
             <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"><img src="/img/LI-In-Bug.png" alt="Charles' LinkedIn"/></a>
         </div>
         <div class = "aboutMin">
@@ -31,7 +31,7 @@
             <span class = "itemTitle">Rensselaer Polytechnic Institute</span>
             <span class = "itemTime">Fall 2020 - Fall 2023 (Estimated)</span>
             <span class = "itemJob">Computer Science + GSAS</span>
-            <span class = "itemJob">GPA: 3.64/4.0</span>
+            <span class = "itemJob">GPA: 3.70/4.0</span>
             <span class = "itemSection">Relevant Coursework</span>
             <ul>
                 <li>Rensselaer Center for Open Source (RCOS) [CSCI-2961]</li>
