--- a/projects.html
+++ b/projects.html
@@ -10,13 +10,13 @@
     <body class="darkBG">
         <div class="halfPage">
             <div class="links">
-                <a href="https://www.github.com/talios0"
+                <a href="https://www.github.com/taliyos"
                     ><img src="/img/GitHub-Mark-Light-120px-plus.png" alt="Charles' Github"
                 /></a>
-                <a href="https://talios0.itch.io"
+                <a href="https://taliyos.itch.io"
                     ><img src="/img/itchio-textless-white.svg" alt="Charles' Itch.io"
                 /></a>
-                <a href="https://www.twitter.com/talios0"
+                <a href="https://www.twitter.com/taliyos"
                     ><img src="/img/2021 Twitter logo - white.png" alt="Charles' Twitter"
                 /></a>
                 <a href="https://www.linkedin.com/in/charles-reverand-b64694187/"
