Updated Portfolio with new projects and adjusted styling to be less busy

--- a/education.html
+++ b/education.html
@@ -31,15 +31,18 @@
             <span class = "itemTitle">Rensselaer Polytechnic Institute</span>
             <span class = "itemTime">Fall 2020 - Fall 2023 (Estimated)</span>
             <span class = "itemJob">Computer Science + GSAS</span>
-            <span class = "itemJob">GPA: 3.70/4.0</span>
+            <span class = "itemJob">GPA: 3.71/4.0</span>
             <span class = "itemSection">Relevant Coursework</span>
             <ul>
-                <li>Rensselaer Center for Open Source (RCOS) [CSCI-2961]</li>
                 <li>Game Development II [GSAS-4540]</li>
                 <li>Intro to Game Design [GSAS-1200]</li>
+                <li>Computer Graphics for Games [GSAS-4530]</li>
+                <li>Linear Algebra [MATH-4100]</li>
                 <li>Operating Systems [CSCI-4210]</li>
                 <li>Data Structures [CSCI-1200]</li>
                 <li>Intro to Algorithms [CSCI-2300]</li>
+                <li>Principles of Software [CSCI-2600]</li>
+                <li>Rensselaer Center for Open Source (RCOS) [CSCI-2961]</li>
                 <li>Foundations of Computer Science [CSCI-2200]</li>
                 <li>Computer Organization [CSCI-2500]</li>
             </ul>
