--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,42 @@
         </div>
         <div class="projects">
             <div class="item">
+                <span class="itemTitle">Project TBA</span>
+                <span class="itemTime">Summer 2022 - Present</span>
+                <p class="itemDetail">
+                    A longer form game project intended for wide distribution and appeal.
+                </p>
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>Game Jam</span></div>
+                </div>
+                <span class="itemTitle">Ensemble of Spirits</span>
+                <span class="itemTime">Summer 2022</span>
+                <p class="itemDetail">
+                    A 3D Puzzle Platformer created for the Brackeys Game Jam. Lead Developer & Designer in a team of 6.
+                </p>
+                <ul>
+                    <li>Unity, Perforce, C#</li>
+                </ul>
+                <img src="img/eos/eos-0.png" />
+                <iframe src="https://itch.io/embed/1679111?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/ensemble-of-spirits">Ensemble of Spirits by taliyos, stytchys, Saber333, flamingstallion, LukaTragic</a></iframe>
+            </div>
+            <div class="item">
+                <div class="itemType">
+                    <div><span>RCOS</span></div>
+                </div>
+                <span class="itemTitle">Oypu</span>
+                <span class="itemTime">Summer 2022</span>
+                <p class="itemDetail">
+                    A puzzle game focusing on bringing classic Puyo Puyo gameplay to the web. Programmer.
+                </p>
+                <ul>
+                    <li>Phaser, Typescript</li>
+                </ul>
+                <a href="https://www.github.com/taliyos/OypuGame">View Oypu on GitHub</a>
+            </div>
+            <div class="item">
                 <div class="itemType">
                     <div><span>Game Development II</span></div>
                 </div>
@@ -49,7 +85,8 @@
                 <ul>
                     <li>Unity, Perforce, C#</li>
                 </ul>
-                <a class="button" href="https://lunar-tuna-studios.itch.io/steal-yourself">Play on Itch.io</a>
+                <img src="img/stealyourself/sy-0.png" />
+                <iframe src="https://itch.io/embed/1414628?dark=true" width="208" height="167" frameborder="0"><a href="https://lunar-tuna-studios.itch.io/steal-yourself">Steal Yourself by Lunar Tuna Studios, Chad VanPatten, Leon Zhou, taliyos, Leith Reardon, grynmoor, 曾琦淞 Qisong Zeng</a></iframe>
             </div>
             <div class="item">
                 <div class="itemType">
@@ -114,7 +151,7 @@
                     <li>Overall Good: 8/40</li>
                 </ul>
                 <img src="img/hotc/0.png" />
-                <a class="button" href="https://talios0.itch.io/heart-of-the-cards">Play on Itch.io</a>
+                <iframe src="https://itch.io/embed/1071022?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/heart-of-the-cards">Heart of the Cards by taliyos, stytchys, LawrenceOny, Saber333</a></iframe>
             </div>
             <div class="item">
                 <div class="itemType">
@@ -152,7 +189,7 @@
                     </li>
                 </ul>
                 <img src="img/snowman/0.png" />
-                <a class="button" href="https://talios0.itch.io/christmas-of-the-snowmen">Play on Itch.io</a>
+                <iframe src="https://itch.io/embed/1330257?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/christmas-of-the-snowmen">Christmas of the Snowmen by taliyos, Saber333</a></iframe>
             </div>
         </div>
     </body>
