--- a/work.html
+++ b/work.html
@@ -28,6 +28,12 @@
     </div>
     <div class = "projects">
         <div class = "item">
+            <span class = "itemTitle">Eco Resilience Global Games Research Group</span>
+            <span class = "itemJob">Project Manager, Gameplay Engineer, & Designer</span>
+            <span class = "itemTime">May 2022 - Present</span>
+            <p class = "itemDetail">Eco Resilience Global Games Research Group is a research endeavour headed by Professor Ruiz at Rensselaer Polytechnic Institute. From May 2022 to the present day, I worked to finalize development on VR Title, <a href="https://store.steampowered.com/app/1955040/The_Aquatic_Messenger/" alt="Link to view The Aquatic Messegner on Steam">The Aquatic Messenger</a>.</p>
+        </div>
+        <div class = "item">
             <span class = "itemTitle">Sterling Medical Devices</span>
             <span class = "itemJob">Software Systems Engineer Intern</span>
             <span class = "itemTime">May 2019 - June 2020</span>
