--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span>RPI '24 Computer Science and Games and Simulation Arts and Sciences</span>
         </div>
         <div class = "info">
-            <img alt = "A photo of Charles Reverand against a gray/black backdrop" src="img/temp.jpg"/>
+            <img alt = "A photo of Charles Reverand against a gray/black backdrop" src="img/profilepicture.jpg"/>
             <div>
                 Hiya! I'm a current junior Computer Science student, dual majoring in GSAS, with a passion for game development.
             </div>
