Some project updates + css changes

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="/css/fonts.css" />
         <link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="/css/half.css"/>
         <link rel="stylesheet" href="/css/mobile.css" />
     </head>
     <body class="darkBG">
@@ -37,10 +38,13 @@
         </div>
         <div class="projects">
             <div class="item">
+				<div class="itemType">
+                    <div><span>Personal</span></div>
+                </div>
                 <span class="itemTitle">Project TBA</span>
                 <span class="itemTime">Summer 2022 - Present</span>
                 <p class="itemDetail">
-                    A longer form game project intended for wide distribution and appeal.
+                    A longer form project that aims to expand my reach across tools and environments while creating a fun experience.
                 </p>
             </div>
             <div class="item">
@@ -121,7 +125,7 @@
                     <div><span>Personal</span></div>
                 </div>
                 <span class="itemTitle">Anime Schedule</span>
-                <span class="itemTime">February 2022 - Present</span>
+                <span class="itemTime">February 2022 - September 2022</span>
                 <p class="itemDetail">
                     Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and
                     AniList APIs.
@@ -158,14 +162,13 @@
                     <div><span>Personal</span></div>
                 </div>
                 <span class="itemTitle">Catan-Like Discord Game</span>
-                <span class="itemTime">Summer 2021 - Present</span>
+                <span class="itemTime">Summer 2021</span>
                 <p class="itemDetail">
-                    A WIP Discord Bot that recreates Catan, playable directly through a Discord Server's chat room.
+                    A private Discord Bot that recreates Catan, playable directly through a Discord Server's chat room.
                     Keeps track of game progess and allows for multiple concurrent games.
                 </p>
                 <ul>
                     <li>Discord.JS, NodeJS, MongoDB, JS</li>
-                    <li>Estimated Progress: 72%</li>
                 </ul>
                 <img src="img/catan/0.png" />
             </div>
