--- a/work.html
+++ b/work.html
@@ -3,7 +3,9 @@
 <head>
     <title>Charles Reverand's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="/css/main.css"/>
+	<link rel="stylesheet" href="/css/half.css"/>
     <link rel="stylesheet" href="/css/mobile.css"/>
 </head>
 <body class = "darkBG">
@@ -29,10 +31,11 @@
     <div class = "projects">
         <div class = "item">
             <span class = "itemTitle">Eco Resilience Global Games Research Group</span>
-            <span class = "itemJob">Project Manager, Gameplay Engineer, & Designer</span>
+            <span class = "itemJob">Lead Programmer, Associate Designer, Director, & Producer</span>
             <span class = "itemTime">May 2022 - Present</span>
-            <p class = "itemDetail">Eco Resilience Global Games Research Group is a research endeavour headed by Professor Ruiz at Rensselaer Polytechnic Institute. From May 2022 to the present day, I worked to finalize development on VR Title, <a href="https://store.steampowered.com/app/1955040/The_Aquatic_Messenger/" alt="Link to view The Aquatic Messegner on Steam">The Aquatic Messenger</a>.</p>
-        </div>
+            <p class = "itemDetail">Eco Resilience Global Games Research Group is a research endeavour headed by Professor Ruiz at Rensselaer Polytechnic Institute. From May 2022 to the present day, I worked to finalize development on VR Title, <a href="https://store.steampowered.com/app/1955040/The_Aquatic_Messenger/" alt="Link to view The Aquatic Messegner on Steam">The Aquatic Messenger</a> with performance optimizations, feature improvements, and testing.</p>
+			<p>More information <a href = "https://sites.google.com/view/eco-resilience/home">here</a></p>
+		</div>
         <div class = "item">
             <span class = "itemTitle">Sterling Medical Devices</span>
             <span class = "itemJob">Software Systems Engineer Intern</span>
