--- a/projects.html
+++ b/projects.html
@@ -37,15 +37,29 @@
             </nav>
         </div>
         <div class="projects">
-            <div class="item">
-				<div class="itemType">
-                    <div><span>Personal</span></div>
+		<div class="item">
+		<div class="itemType">
+                    <div><span>Experimental Game Design</span></div>
                 </div>
-                <span class="itemTitle">Project TBA</span>
-                <span class="itemTime">Summer 2022 - Present</span>
+                <span class="itemTitle">Krack-e-lacken</span>
+                <span class="itemTime">Spring 2023</span>
                 <p class="itemDetail">
-                    A longer form project that aims to expand my reach across tools and environments while creating a fun experience.
+                    Programming and Game Design on a two week project with the theme of "Idle Game". A unique combination of turn-based combat and idle game mechanics where you travel from battle to battle and purchase upgrades along the way.
                 </p>
+		 <img src="img/kel/kel-0ng" />
+<iframe src="https://itch.io/embed/1916713?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/krackelacken">Krack-e-lacken by taliyos, Mike, Chad VanPatten, ken10wil</a></iframe>
+            </div>
+            <div class="item">
+		<div class="itemType">
+                    <div><span>Experimental Game Design</span></div>
+                </div>
+                <span class="itemTitle">Short Fuse</span>
+                <span class="itemTime">Spring 2023</span>
+                <p class="itemDetail">
+                    Programming and Game Design on a one week project where you need to investigate and defuse bombs as fast as possible!
+                </p>
+		 <img src="img/sf/sf-0ng" />
+                <iframe src="https://itch.io/embed/1886681?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/short-fuse">Short Fuse by taliyos, ken10wil, Chad VanPatten, Mike</a></iframe>
             </div>
             <div class="item">
                 <div class="itemType">
@@ -61,20 +75,6 @@
                 </ul>
                 <img src="img/eos/eos-0.png" />
                 <iframe src="https://itch.io/embed/1679111?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/ensemble-of-spirits">Ensemble of Spirits by taliyos, stytchys, Saber333, flamingstallion, LukaTragic</a></iframe>
-            </div>
-            <div class="item">
-                <div class="itemType">
-                    <div><span>RCOS</span></div>
-                </div>
-                <span class="itemTitle">Oypu</span>
-                <span class="itemTime">Summer 2022</span>
-                <p class="itemDetail">
-                    A puzzle game focusing on bringing classic Puyo Puyo gameplay to the web. Programmer.
-                </p>
-                <ul>
-                    <li>Phaser, Typescript</li>
-                </ul>
-                <a href="https://www.github.com/taliyos/OypuGame">View Oypu on GitHub</a>
             </div>
             <div class="item">
                 <div class="itemType">
@@ -122,25 +122,6 @@
             </div>
             <div class="item">
                 <div class="itemType">
-                    <div><span>Personal</span></div>
-                </div>
-                <span class="itemTitle">Anime Schedule</span>
-                <span class="itemTime">February 2022 - September 2022</span>
-                <p class="itemDetail">
-                    Shows the release dates for English-dubbed anime in a graphical format. Utilizes the TeamUp and
-                    AniList APIs.
-                </p>
-                <ul>
-                    <li>NodeJS, Express, JS</li>
-                    <li>
-                        View on
-                        <a href="https://www.github.com/talios0/Anime-Dub-Schedule">GitHub</a>
-                    </li>
-                </ul>
-                <a class="button" href="https://talios.software">Go to Site</a>
-            </div>
-            <div class="item">
-                <div class="itemType">
                     <div><span>Game Jam</span></div>
                 </div>
                 <span class="itemTitle">Heart of the Cards</span>
@@ -156,43 +137,6 @@
                 </ul>
                 <img src="img/hotc/0.png" />
                 <iframe src="https://itch.io/embed/1071022?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/heart-of-the-cards">Heart of the Cards by taliyos, stytchys, LawrenceOny, Saber333</a></iframe>
-            </div>
-            <div class="item">
-                <div class="itemType">
-                    <div><span>Personal</span></div>
-                </div>
-                <span class="itemTitle">Catan-Like Discord Game</span>
-                <span class="itemTime">Summer 2021</span>
-                <p class="itemDetail">
-                    A private Discord Bot that recreates Catan, playable directly through a Discord Server's chat room.
-                    Keeps track of game progess and allows for multiple concurrent games.
-                </p>
-                <ul>
-                    <li>Discord.JS, NodeJS, MongoDB, JS</li>
-                </ul>
-                <img src="img/catan/0.png" />
-            </div>
-            <div class="item">
-                <div class="itemType">
-                    <div><span>Game Jam</span></div>
-                </div>
-                <span class="itemTitle">Christmas of the Snowmen</span>
-                <span class="itemTime">December 2021</span>
-                <p class="itemDetail">
-                    Programmer, Designer, and Artist for this game about a Christmas Tree saving Christmas for the Jame
-                    Gam Christmas Edition in 1.5 days.
-                </p>
-                <ul>
-                    <li>Unity3D, C#, Aseprite</li>
-                    <li>Overall Ranking: 22/81</li>
-                    <li>Theme Ranking: 9/81</li>
-                    <li>
-                        View on
-                        <a href="https://www.github.com/talios0/SantaSnowman">GitHub</a>
-                    </li>
-                </ul>
-                <img src="img/snowman/0.png" />
-                <iframe src="https://itch.io/embed/1330257?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/christmas-of-the-snowmen">Christmas of the Snowmen by taliyos, Saber333</a></iframe>
             </div>
         </div>
     </body>
