--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                 <p class="itemDetail">
                     Programming and Game Design on a two week project with the theme of "Idle Game". A unique combination of turn-based combat and idle game mechanics where you travel from battle to battle and purchase upgrades along the way.
                 </p>
-		 <img src="img/kel/kel-0ng" />
+		 <img src="img/kel/kel-0.jpg" />
 <iframe src="https://itch.io/embed/1916713?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/krackelacken">Krack-e-lacken by taliyos, Mike, Chad VanPatten, ken10wil</a></iframe>
             </div>
             <div class="item">
@@ -58,7 +58,7 @@
                 <p class="itemDetail">
                     Programming and Game Design on a one week project where you need to investigate and defuse bombs as fast as possible!
                 </p>
-		 <img src="img/sf/sf-0ng" />
+		 <img src="img/sf/sf-0.jpg" />
                 <iframe src="https://itch.io/embed/1886681?dark=true" width="208" height="167" frameborder="0"><a href="https://taliyos.itch.io/short-fuse">Short Fuse by taliyos, ken10wil, Chad VanPatten, Mike</a></iframe>
             </div>
             <div class="item">
