Added Pengowl to projects

--- a/projects.html
+++ b/projects.html
@@ -61,6 +61,20 @@
 			<div class="itemType">
 				<div><span>Experimental Game Design</span></div>
 			</div>
+			<span class="itemTitle">Pengowl</span>
+			<span class="itemTime">Spring 2023</span>
+			<p class="itemDetail">
+				Programming, Game Design, and UI on a one month project focused on incorporating interesting input between two co-operative characters in a 3D puzzle platformer.
+			</p>
+			<img src="img/po/po-0.png" />
+			<iframe src="https://itch.io/embed/1991173?dark=true" width="208" height="167" frameborder="0">
+				<a href="https://taliyos.itch.io/pengowl">Pengowl by Charles Reverand, Chad VanPatten, Mike, ken10wil</a>
+			</iframe>
+		</div>
+		<div class="item">
+			<div class="itemType">
+				<div><span>Experimental Game Design</span></div>
+			</div>
 			<span class="itemTitle">Krack-e-lacken</span>
 			<span class="itemTime">Spring 2023</span>
 			<p class="itemDetail">
